--- a/test.css
+++ b/test.css
@@ -213,6 +213,10 @@ div.toggle-bx .sign:before {
   text-align: center;
 }
 
+.media-con > section {
+  margin: 40px 0;
+}
+
 .media-con > section h2 {
   font-size: clamp(24px, 4vw, 40px);
   margin-bottom: 12px;
