--- a/test.css
+++ b/test.css
@@ -178,17 +178,46 @@ div.toggle-bx .sign:before {
 
 .park-summary {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2em;
 }
 
-.park-summary > div {
+.park-summary .summary-box {
   margin: 2em 0;
+  border: 2px solid #47cebb;
+  background: #fff;
+  text-align: center;
+  padding: 20px 15px 20px 30px !important;
+  margin: 20px 15px 0 0;
+  border-radius: 5px 5px;
+  position: relative;
+  z-index: 1;
+  min-height: 324px;
 }
+
+.summary-box::after, .summary-box::before {
+  content: "";
+  background: #47cebb;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 5px;
+  position: absolute;
+  top: -20px;
+  right: -16px;
+  z-index: -1;
+}
+
+.summary-box::after {
+  background: #fff;
+  top: -10px;
+  left: 8px;
+  box-shadow: 0 0 6px rgba(0,0,0,.3);
+}
+
 
 .park-summary > div h2 {
-  text-align: left;
-  color: #000;
   margin-bottom: 16px;
-  border-bottom: 1px solid rgb(100, 116, 139, 1);
 }
 
 .park-summary > div .long-txt {
@@ -197,7 +226,7 @@ div.toggle-bx .sign:before {
 
 .park-summary > div a {
   display: block;
-  background: #000cff;
+  background: #47cebb;
   text-align: center;
   padding: 10px;
   border-radius: 4px;
@@ -237,7 +266,14 @@ div.toggle-bx .sign:before {
   .park-con {
     grid-template-columns: 1fr;
   }
-
+  .park-summary {
+    grid-template-columns: 1fr;
+    gap: 2em;
+  }
+  
+  .park-summary .summary-box {
+    min-height: auto;
+  }
 
   .park-summary > div h2 {
     text-align: center;
