--- a/test.css
+++ b/test.css
@@ -86,7 +86,7 @@ main {
 }
 
 .park-head h2 {
-  font-size: clamp(28px, 4vw, 46px);
+  font-size: clamp(1.5rem, 4vw, 2.9rem);
   font-weight: bold;
   font-family: var(--styleFont);
   color: #47cebb;
@@ -233,7 +233,7 @@ div.toggle-bx .sign:before {
   border-radius: 4px;
   color: #fff;
   margin: 20px auto 0;
-  width: min(120px, 100%);
+  width: min(8rem, 100%);
 }
 .park-summary > div a.read-less {
   display: none;
@@ -253,17 +253,17 @@ div.toggle-bx .sign:before {
 }
 
 .media-con .photo img {
-  width: 600px;
+  width: 37.5rem;
 }
 
 .media-con .video iframe {
-  width: min(650px,100%);
-  height: 400px;
+  width: min(40.6rem,100%);
+  height: 25rem;
 }
 
 
 
-@media screen and (max-width: 1000px) {
+@media (width < 62.5em) {
   .park-con {
     grid-template-columns: 1fr;
   }
@@ -280,3 +280,4 @@ div.toggle-bx .sign:before {
     text-align: center;
   }
 }
+
